# dotfiles

./: .gitignore  LICENSE  README.md  SPEC_DRIVEN_DEVELOPMENT.md  setup
_setup/: install-aerospace  install-dotfiles  install-sketchybar  setup-jira-env  setup-jira-env.fish
aerospace/: config.toml
ags/: AGENTS.md  app.ts  style.scss
alacritty/: alacritty.toml
bat/: config
btop/: btop.conf
claude/: statusline-command.sh
fish/: config.fish  config.local.fish  fish_plugins  startup.fish
fzf/: fzf.zsh
ghostty/: config
hypr/: autostart.conf  bindings.conf  hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf  input.conf  looknfeel.conf  monitors.conf  watch-waybar
imwheel/: imwheelrc
karabiner/: build
kitty/: kitty.conf  tui.conf
kmonad/: allium58.kbd  config.kbd  keychron_k7.kbd
lazygit/: config.yml
mise/: config.toml
nvim/: SPEC_DRIVEN_DEVELOPMENT.md  init.lua  init.vim
opencode/: opencode.json
scripts/: calendar-meetings  docker-containers  (+3 more)
scripts/tmux-session-manager/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  tests  tmux-session-manager
scripts/tmux-session-manager/core/: active.sh  recent.sh
scripts/tmux-session-manager/plugins/: scratch.sh  tmuxinator.sh  worktree.sh
scripts/tmux-session-manager/src/: config.rs  lib.rs  main.rs
scripts/tmux-session-manager/src/core/: mod.rs  session.rs  tmux.rs  ui.rs
scripts/tmux-session-manager/src/plugins/: active.rs  manager.rs  mod.rs  recent.rs  scratch.rs  tmuxinator.rs  traits.rs  worktree.rs
scripts/tmux-session-manager/tests/: integration_tests.rs
(+291 files in other folders)
